# sqlalchemy-geoserver

./: .gitignore  README.md  docker-compose.yml  publish.sh  pyproject.toml
src/sqlalchemy_geoserver/: __init__.py  compiler.py  dbapi.py  dialect.py
tests/: test_cql.py  test_dialect.py  test_integration.py  test_parcel.py  test_parcel_attributes.py
